--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 /* ==================== CABECERA ==================== */
 header {
-  background-image: url('banner.jpg');
+  background-image: url('/banner.jpg');
   background-size: cover;
   background-position: center;
   padding: 5rem 1.5rem 2rem;
